# rust-wrapper-breadwallet-core

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.rs  wrapper.h
src/: lib.rs
