[package]
name = "rust_wrapper_breadwallet_core"
version = "0.1.0"
authors = ["Aidan Curtis <aamcurtis@googlemail.com>"]
edition = "2018"
links = "rust_wrapper_breadwallet_core"
license-file = "LICENSE.md"
description = "Rust interface for breadwallet-core"
documentation = "https://github.com/contact-tracer/rust-wrapper-breadwallet-core"
repository = "https://github.com/contact-tracer/rust-wrapper-breadwallet-core"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

[build-dependencies]
bindgen = "0.53.1"
cmake = "0.1"

[lib]
crate-type = ["rlib"]